...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/compareButton"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:onClick="handleCompareClick"
                android:text="@string/compare"
                app:cornerRadius="15dp" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="46dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:onClick="handleCancelClick"
                android:text="@string/cancel"
...
